docs: note packaging module requirements + client connection pool / UI stack
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01R4cXJKf8uY9Ftcu69MSb6r